--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ tenacity = "^9.1.2"
 python-dotenv = "^1.1.0"
 typer = {extras = ["all"], version = "^0.15.2"}
 python-json-logger = "^2.0.7"
+urllib3 = "^2.5"
 
 [tool.poetry.extras]
 pandas = ["pandas"]
