fix(ci): robustify security audit step and patch cryptography vulnerability
- Wrap `pip-audit` in a retry loop (3 attempts) to handle intermittent network timeouts from `api.osv.dev`.
- Increase `pip-audit` timeout to 60 seconds (default 15s).
- Update `cryptography` dependency to version 46.0.5 to resolve a security vulnerability (GHSA-...).

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,13 @@ jobs:
       - name: Security Audit
         run: |
           poetry run pip install pip-audit
-          poetry run pip-audit -s osv
+          for i in 1 2 3; do
+            poetry run pip-audit -s osv --timeout 60 && exit 0
+            echo "Attempt $i failed. Retrying in 10s..."
+            sleep 10
+          done
+          echo "Audit failed after 3 attempts."
+          exit 1
 
   # ------------------------------------------------------------------
   # JOB 2: BUILD ARTIFACT (Builds the library)
